Make crash-recover

--- a/Replication/Passive/package.json
+++ b/Replication/Passive/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative api/interface.proto",
-    "compile:npx": "npx protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative api/interface.proto"
+    "compile": "protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative api/interface.proto && go mod tidy",
+    "compile:npx": "npx protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative api/interface.proto && go mod tidy"
   },
   "repository": {
     "type": "git",
